unpackaged/main/default/objects/act__c/act__c.object-meta.xml
<CustomObject>
    <label>Акт шеф-монтажа</label>
    <nameField>
        <displayFormat>{000}/{MM}.{YY}</displayFormat>
        <label>Номер акта</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Акты шеф-монтажа</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>