unpackaged/main/default/objects/act__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Адрес</label>
    <length>255</length>
    <type>Text</type>
</CustomField>