unpackaged/main/default/objects/act__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Дата</label>
    <type>Date</type>
</CustomField>