unpackaged/main/default/objects/act__c/fields/Fio__c.field-meta.xml
<CustomField>
    <fullName>Fio__c</fullName>
    <label>Фамилия и инициалы (исполнитель)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>