unpackaged/main/default/objects/act__c/fields/FioClient__c.field-meta.xml
<CustomField>
    <fullName>FioClient__c</fullName>
    <label>Фамилия и инициалы (заказчик)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>