unpackaged/main/default/objects/act__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Возможность</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Акты шеф-монтажа</relationshipLabel>
    <relationshipName>Act</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>