unpackaged/main/default/objects/act__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Должность (исполнитель)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>