unpackaged/main/default/objects/act__c/fields/PositionClient__c.field-meta.xml
<CustomField>
    <fullName>PositionClient__c</fullName>
    <label>Должность (заказчик)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>