unpackaged/main/default/objects/act__c/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Акт</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Акты шеф-монтажа</relationshipLabel>
    <relationshipName>mDWm</relationshipName>
    <type>Lookup</type>
</CustomField>