unpackaged/main/default/objects/act__c/validationRules/StartWorkingProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>StartWorkingProducts</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.StartWorkingProducts__c == NULL</errorConditionFormula>
    <errorMessage>Укажите дату ввода оборудования в эксплуатацию в проекте!</errorMessage>
</ValidationRule>